Fixed weird jumping when modals open/close

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -14,6 +14,11 @@ body {
 	color: @body_color;
 	background-color: @body_background;
 	background-image: url(/resources/background-grey.png);
+	
+	&.modal-open { //prevent weird visual jumping
+		overflow-y: scroll !important;
+		padding-right: 0 !important;
+	}
 }
 
 a {
